# AI_impacto_empresarial

./: .gitignore  HOW_TO_GET_REAL_NEWS.md  LANGGRAPH_LOCAL_GUIDE.md  README.md  README_LANGGRAPH.md  SENTIMENTS_QUICKSTART.md  STUDENT_QUICKSTART.md  app.py  autoencoders.ipynb  change_point_detection.ipynb  debug_yf.py  langgraph_tutorial_local.ipynb  lgb_forecast.py  lgb_forecast_v2.py  main.py  news_sentiment_app.py  nombres.txt  pyproject.toml  requirements.txt  run_sentiment_app.bat  run_translator.bat  sentiments_agents.ipynb  text_models.ipynb  time_series.ipynb  titianic.ipynb  translation_app.py  tutorial0.ipynb
