[project]
name = "ai-impacto-empresarial"
version = "0.1.0"
description = "AI and ML experiments with transformers, diffusion models, and text generation"
requires-python = ">=3.11"
dependencies = [
    "transformers==4.56.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "diffusers==0.35.1",
    "ollama==0.5.3",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "matplotlib==3.10.6",
    "seaborn==0.13.2",
    "scikit-learn==1.7.1",
    "plotly==6.3.0",
    "jupyter==1.1.1",
    "jupyterlab==4.4.7",
    "ipykernel==6.30.1",
    "ipywidgets==8.1.7",
    "gradio==5.44.1",
    "streamlit==1.49.1",
    "wandb==0.21.3",
    "tensorboard==2.20.0",
    "tqdm==4.67.1",
    "requests==2.32.5",
    "datasets==4.0.0",
    "tokenizers==0.22.0",
    "accelerate==1.10.1",
    "huggingface-hub==0.34.4",
    "safetensors==0.6.2",
    "yfinance>=0.2.66",
    "statsmodels>=0.14.5",
]
